force-app/main/default/objects/Work_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipName>Work_Orders</relationshipName>
</CustomField>