force-app/main/default/objects/Work_Order__c/fields/AI_Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>AI_Assignment_Reason__c</fullName>
    <label>AI Assignment Reason</label>
    <type>TextArea</type>
</CustomField>