force-app/main/default/objects/Work_Order__c/fields/AI_Pre_Job_Briefing__c.field-meta.xml
<CustomField>
    <fullName>AI_Pre_Job_Briefing__c</fullName>
    <label>AI Pre-Job Briefing</label>
    <type>LongTextArea</type>
    <length>32768</length><visibleLines>5</visibleLines>
</CustomField>