force-app/main/default/objects/Work_Order__c/fields/AI_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Risk_Score__c</fullName>
    <label>AI Risk Score</label>
    <type>Number</type>
    <precision>3</precision><scale>0</scale>
</CustomField>