force-app/main/default/objects/Work_Order__c/fields/AI_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>AI_Service_Report__c</fullName>
    <label>AI Service Report</label>
    <type>LongTextArea</type>
    <length>32768</length><visibleLines>5</visibleLines>
</CustomField>