force-app/main/default/objects/Work_Order__c/fields/Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician__c</fullName>
    <label>Assigned Technician</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo><relationshipName>Assigned_Work_Orders</relationshipName>
</CustomField>