force-app/main/default/objects/Work_Order__c/fields/Briefing_Generated__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Generated__c</fullName>
    <label>Briefing Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>