force-app/main/default/objects/Work_Order__c/fields/Customer_Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature_URL__c</fullName>
    <label>Customer Signature URL</label>
    <type>Url</type>
</CustomField>