force-app/main/default/objects/Work_Order__c/fields/Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Equipment_ID__c</fullName>
    <label>Equipment ID</label>
    <type>Text</type>
    <length>50</length><externalId>true</externalId>
</CustomField>