force-app/main/default/objects/Work_Order__c/fields/Offline_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Offline_Queue_ID__c</fullName>
    <label>Offline Queue ID</label>
    <type>Text</type>
    <length>50</length><externalId>true</externalId>
</CustomField>