force-app/main/default/objects/Work_Order__c/fields/Report_Sent_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Report_Sent_To_Customer__c</fullName>
    <label>Report Sent To Customer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>