force-app/main/default/objects/Work_Order__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <label>Site Address</label>
    <type>TextArea</type>
</CustomField>