force-app/main/default/objects/Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>New</fullName><default>true</default></value><value><fullName>Assigned</fullName></value><value><fullName>In Progress</fullName></value><value><fullName>Completed</fullName></value><value><fullName>Cancelled</fullName></value></valueSetDefinition></valueSet>
</CustomField>