force-app/main/default/objects/Work_Order__c/fields/Technician_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technician_Notes__c</fullName>
    <label>Technician Notes</label>
    <type>LongTextArea</type>
    <length>32768</length><visibleLines>5</visibleLines>
</CustomField>