force-app/main/default/objects/Work_Order__c/fields/Time_Logged_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Logged_Minutes__c</fullName>
    <label>Time Logged (Minutes)</label>
    <type>Number</type>
    <precision>6</precision><scale>0</scale>
</CustomField>