force-app/main/default/objects/Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Account__c</columns>
    <columns>Assigned_Technician__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Equipment_ID__c</columns>
    <columns>Scheduled_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
</ListView>