force-app/main/default/objects/Work_Order__c/listViews/Open_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Open_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Account__c</columns>
    <columns>Assigned_Technician__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Scheduled_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Open Work Orders</label>
</ListView>